RESOLVED FIXED201287
[iOS 13] Caret does not appear in text field if the body element is translated completely out of the viewport
https://bugs.webkit.org/show_bug.cgi?id=201287
Summary [iOS 13] Caret does not appear in text field if the body element is translate...
Wenson Hsieh
Reported 2019-08-28 21:34:35 PDT
Attachments
Patch (8.59 KB, patch)
2019-08-28 21:49 PDT, Wenson Hsieh
no flags
Patch (8.60 KB, patch)
2019-08-29 07:28 PDT, Wenson Hsieh
no flags
Tweak ChangeLog wording (8.58 KB, patch)
2019-08-29 08:29 PDT, Wenson Hsieh
no flags
Standalone HTML reproduction (6.10 KB, text/html)
2019-08-29 12:29 PDT, Pierre-Luc Auclair
no flags
Xcode Project WKWebview reproduction (59.86 KB, application/zip)
2019-08-29 12:30 PDT, Pierre-Luc Auclair
no flags
Safari screen capture (8.91 MB, video/mp4)
2019-08-29 12:30 PDT, Pierre-Luc Auclair
no flags
WK screen capture (5.93 MB, video/mp4)
2019-08-29 12:30 PDT, Pierre-Luc Auclair
no flags
Wenson Hsieh
Comment 1 2019-08-28 21:49:03 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 2 2019-08-29 07:28:42 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 3 2019-08-29 08:29:43 PDT
Created attachment 377589 [details] Tweak ChangeLog wording
Pierre-Luc Auclair
Comment 4 2019-08-29 12:28:36 PDT
We are having this very same blocking issue. Here's what we were about to send to the Feedback Tracker, but thankfully I found this here. You can find reproductions attached. --- Blocker: Caret not shown on inputs within transformed elements in Safari and WkWebview # Issue identification: The caret does not show in inputs that are within transformed (translation, etc) elements. # Applies to: All devices running iOS 13.0.X and 13.1.X betas released so far. (Tested in various iPhones, iPod) # Provided projects A. A HTML file that can be served and opened in Safari directly, showing the issue. B. A Xcode project to build and test on iOS 13, showing the issue. # Reproduction steps: 1. Click the input on the first page, the caret will display along with the keyboard. 2. Click the "Switch page" button above. 3. Click the input on the second page, the caret will not display along with the keyboard.
Pierre-Luc Auclair
Comment 5 2019-08-29 12:29:22 PDT
Created attachment 377607 [details] Standalone HTML reproduction
Pierre-Luc Auclair
Comment 6 2019-08-29 12:30:02 PDT
Created attachment 377608 [details] Xcode Project WKWebview reproduction
Pierre-Luc Auclair
Comment 7 2019-08-29 12:30:33 PDT
Created attachment 377609 [details] Safari screen capture
Pierre-Luc Auclair
Comment 8 2019-08-29 12:30:59 PDT
Created attachment 377610 [details] WK screen capture
Pierre-Luc Auclair
Comment 9 2019-08-29 13:59:04 PDT
In addition, this may be related or not, but the input interaction menu does now show up on the fields where the caret is broken. It's impossible to select all, paste, copy, etc.
WebKit Commit Bot
Comment 10 2019-08-29 15:17:53 PDT
Comment on attachment 377589 [details] Tweak ChangeLog wording Clearing flags on attachment: 377589 Committed r249296: <https://trac.webkit.org/changeset/249296>
WebKit Commit Bot
Comment 11 2019-08-29 15:17:54 PDT
All reviewed patches have been landed. Closing bug.
Wenson Hsieh
Comment 12 2019-08-29 16:05:15 PDT
(In reply to Pierre-Luc Auclair from comment #4) > We are having this very same blocking issue. Here's what we were about to > send to the Feedback Tracker, but thankfully I found this here. You can find > reproductions attached. Thanks for the bug report and test case, Pierre! I tried out your test app, and observed that the bug still reproduces even after the above change. I’m currently working on a fix for your test case, which I’m tracking in <https://bugs.webkit.org/show_bug.cgi?id=201317>.
Note You need to log in before you can comment on or make changes to this bug.